    - Finish moving installation howto to manual.
    - Remove no-useless index.en.html.
  * dann frazier
    - Add ia64 elilo .msg files from Jim Lieb
    - Add ia64 2.6 image build goo, contributed by Jim Lieb
  * Bastian Blank
    - Drop the whole bunch of languages on s390.
  * Stephen R. Marenka
    - Modify m68k/atari bootargs to default to
      debian-installer/framebuffer=false.
  * Martin Michlmayr
    - Improve manifest descriptions of the Broadcom BCM1250 (SWARM)
      evaluation board.
    - Put a SiByl TFTP boot configuration script to sb1-swarm-bn/netboot.
    - Put the SiByl boot loader to sb1-swarm-bn/netboot.
    - Update the Cobalt manifest descriptions to reflect reality
      (the config now uses NFS, not TFTP).
    - Create an nfsroot tar file for Cobalt which can easily be extracted
      (containing all files including proper symlinks).
    - Put sibyl-installer on the sb1-swarm-bn/netboot initrd as a workaround
      to change debian-installer/kernel/linux/link_in_boot.

 -- Bastian Blank <waldi@debian.org>  Mon, 16 Aug 2004 16:29:49 +0200

debian-installer (20040801) unstable; urgency=medium

  * Joey Hess
    - Work around a bug in genext2fs that causes it to produce 1441k floppies.
      Closes: #262266
    - Add ipv6-modules and wireless-tools-udeb back to net-drivers floppy.
    - Built with newer version of lowmem.
    - Temporarily add libnewt0.51 to build depends to work around libnewt-dev
      dependency breakage.
  * Stephen R. Marenka
    - Update m68k manual.

 -- Joey Hess <joeyh@debian.org>  Sat, 31 Jul 2004 15:28:53 -0400

debian-installer (20040728) unstable; urgency=low

  * Steve Langasek
    - Add additional missing ligature characters and harakat
      (diacritics) to needed-characters/ar.
  * Thiemo Seufer
    - Add /dev/null to the image tree if !USERDEVFS.
  * Bastian Blank
    - Remove countrychooser and languagechoose from generic type.
  * Joey Hess
    - Switch release builds back to using udebs from testing.