@@ -293,6 +293,10 @@
   <!ENTITY rawwrite.ttp '
 <ulink url="&downloadable-file;images/atari/rawwrite.ttp">.../current/images/atari/rawwrite.ttp</ulink>
   '>
+  
+  <!ENTITY penguin19.hfs '
+<ulink url="&downloadable-file;images/mac/penguin19.hfs">.../current/images/mac/penguin19.hfs</ulink>
+  '>
 
   <!ENTITY ramdisksize '
 <userinput>ramdisk_size=13000</userinput>
@@ -300,15 +304,15 @@
 
 <!-- these are old, but keep some translations building 2004-07-28 -->
   <!ENTITY atari-install-tarball '
-<ulink url="&downloadable-file;atariinstall.tar.gz">.../current/atariinstall.tar.gz</ulink>
+<ulink url="&downloadable-file;atariinstall.tar.gz">old link</ulink>
   '>
 
   <!ENTITY amiga-install-tarball '
-<ulink url="&downloadable-file;amigainstall.tar.gz">.../current/amigainstall.tar.gz</ulink>
+<ulink url="&downloadable-file;amigainstall.tar.gz">old link</ulink>
   '>
 
   <!ENTITY mac-install-tarball '
-<ulink url="&downloadable-file;macinstall.tar.gz">.../current/macinstall.tar.gz</ulink>
+<ulink url="&downloadable-file;macinstall.tar.gz">old link</ulink>
   '>
 
 <!-- mips misc files 2.3.0-2001-04-15 -->
