@@ -16,6 +16,7 @@ debian-installer (20040806) UNRELEASED; urgency=medium
   * Stephen R. Marenka
     - Modify m68k/atari bootargs to default to
       debian-installer/framebuffer=false.
+    - Update m68k manual.
   * Martin Michlmayr
     - Improve manifest descriptions of the Broadcom BCM1250 (SWARM)
       evaluation board.
